logs/mothership.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mothership-0.0.35.egg-info'...
Listing './lib/python3.5/site-packages/mothership'...
Compiling './lib/python3.5/site-packages/mothership/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/__init__.py", line 65
    print '%s has primary tag: %s' % (unqdn, s.tag)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mothership/cobbler'...
Compiling './lib/python3.5/site-packages/mothership/cobbler/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/cobbler/__init__.py", line 124
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mothership/configure'...
Compiling './lib/python3.5/site-packages/mothership/configure/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/configure/__init__.py", line 81
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mothership/dns'...
Compiling './lib/python3.5/site-packages/mothership/dns/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/dns/__init__.py", line 162
    print "dumping vars. realm: %s, site_id: %s, drac: %s, mgmt: %s" % (realm, site_id, drac, mgmt)
                                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mothership/ec2'...
Compiling './lib/python3.5/site-packages/mothership/ec2/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/ec2/__init__.py", line 46
    print '%-20s %-10s %s' % ('name', 'state', 'launched')
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mothership/idrac6'...
Compiling './lib/python3.5/site-packages/mothership/idrac6/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/idrac6/__init__.py", line 36
    print '+=== Adding %s to known_hosts' % host
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/kv'...
Compiling './lib/python3.5/site-packages/mothership/kv/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/kv/__init__.py", line 84
    print "Trying to apply a nonexistent tag. Abort! Abort!"
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/ldap'...
Compiling './lib/python3.5/site-packages/mothership/ldap/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/ldap/__init__.py", line 87
    print "error connecting to ldap server: %s" % ldap_master
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/list_servers'...
Compiling './lib/python3.5/site-packages/mothership/list_servers/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/list_servers/__init__.py", line 48
    print "you must supply a name with the -n flag"
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/list_values'...
Compiling './lib/python3.5/site-packages/mothership/list_values/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/list_values/__init__.py", line 41
    print 'Unsupported listing for: %s' % listing
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/mgmt_vlan'...
Compiling './lib/python3.5/site-packages/mothership/mgmt_vlan/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/mgmt_vlan/__init__.py", line 54
    print "enabling mgmt port for %s.%s.%s" % (host, realm, site_id)
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mothership/mothership_models'...
Listing './lib/python3.5/site-packages/mothership/network_mapper'...
Compiling './lib/python3.5/site-packages/mothership/network_mapper/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/network_mapper/__init__.py", line 28
    _netmasks = list(((0xffffffffL << x) & 0xffffffffL) for x in range(32,-1,-1))
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mothership/puppet'...
Listing './lib/python3.5/site-packages/mothership/serverinfo'...
Compiling './lib/python3.5/site-packages/mothership/serverinfo/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/serverinfo/__init__.py", line 132
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/snmp'...
Compiling './lib/python3.5/site-packages/mothership/snmp/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/snmp/__init__.py", line 50
    print '\n  hostname: %s' % unqdn
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/ssh'...
Compiling './lib/python3.5/site-packages/mothership/ssh/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/ssh/__init__.py", line 101
    os.makedirs(head, 0755)
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/mothership/transkey'...
Compiling './lib/python3.5/site-packages/mothership/transkey/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/transkey/__init__.py", line 173
    print "=== Original dict ==="
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/users'...
Compiling './lib/python3.5/site-packages/mothership/users/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/users/__init__.py", line 112
    print "No uid supplied, selecting the next available: %s" % uid
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/validate'...
Compiling './lib/python3.5/site-packages/mothership/validate/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/validate/__init__.py", line 53
    print 'valid realms are:'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/xen'...
Compiling './lib/python3.5/site-packages/mothership/xen/XenAPI.py'...
***   File "./lib/python3.5/site-packages/mothership/xen/XenAPI.py", line 64
    except Exception, exn:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mothership/xen/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/xen/__init__.py", line 40
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mothership/zabbix'...
Compiling './lib/python3.5/site-packages/mothership/zabbix/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/zabbix/__init__.py", line 51
    print "Zabbix is not active, skipping. Zabbix can be enabled in the mothership config file."
                                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mothership/zenoss'...
Compiling './lib/python3.5/site-packages/mothership/zenoss/__init__.py'...
***   File "./lib/python3.5/site-packages/mothership/zenoss/__init__.py", line 189
    print '''
Usage: %s <host> <user> <pass>
       %s zenoss2.prod.iad login secret
''' % (tuple([ os.path.basename(sys.argv[0]) for i in range(0,2) ]))
             
                              
                                       
  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
